# reportScheduler

./: README.rst  manage.py  requirements.txt  sample.env  setup.cfg  tox.ini
.github/workflows/: build.yml
reportScheduler/: asgi.py  settings.py  urls.py  wsgi.py
task/: admin.py  apps.py  choices.py  models.py
task/migrations/: 0001_initial.py  0002_alter_scheduletask_options_scheduletask_created_and_more.py  0003_historicalscheduletask_search_operator_and_more.py
task/mixin/: base_uuid_model.py
